syntax = "proto3";
package main;
option go_package = "github.com/seveye/goms/examples/rpc/main";

message AddReq {
	uint64 a = 1;
	uint64 b = 2;
}

message AddRsp {
	uint64 c = 1;
}
